added oauth support for google

--- a/templates/login.html
+++ b/templates/login.html
@@ -36,9 +36,10 @@
                 <input type="checkbox" class="mb-3" name="remember">
                 Remember me
                 </input><br />
+
                 <div id="sso-buttons" class="mx-auto mb-3" style="width: 15rem;">
                     <div class="mb-1">
-                        <a href="" class="btn btn-outline-dark btn-block" role="button">
+                        <a href="/login_oauth" class="btn btn-outline-dark btn-block" role="button">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Lohgo.svg.png" class="sso-button"/>
                             &nbspLogin with Google
                         </a>
