Send recommendation email based on watchlist

--- a/templates/providers.html
+++ b/templates/providers.html
@@ -33,6 +33,13 @@
                 </div>
                 {% endif %}
             </div>
+            <div class="row left-aligned" style="padding-top: 1.5rem;">
+                <a href="/watchlist?id={{media.id}}&title={{media.title}}&path={{media.poster_path}}">
+                    <button class="btn btn-light" style="border-radius: 1rem;">
+                        Add to Watchlist
+                    </button>
+                </a>
+            </div>
         </div>
     </div>
     <hr />
