--- a/templates/search-success.html
+++ b/templates/search-success.html
@@ -26,11 +26,11 @@
                     </div>
                 </div>
                 <div class="col col-sm-1 right-aligned">
-                    <!-- <a href="/watchlist?id={{media.id}}&title={{media.title}}&path={{media.poster_path}}"> -->
-                    <!-- <button class="btn btn-light" style="border-radius: 1rem;">
-                        +
-                    </button> -->
-                    <!-- </a> -->
+                    <!-- <a href="/watchlist?id={{media.id}}&title={{media.title}}&path={{media.poster_path}}">
+                        <button class="btn btn-light" style="border-radius: 1rem;">
+                            +
+                        </button>
+                    </a> -->
                 </div>
             </div>
         </div>
