--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -57,8 +57,15 @@
 
   </style>
 
-        <h1 class="title" style="margin-bottom: 125px; font-size: 50px; margin-top: 50px;">Your watchlist</h1>
-
+        <h1 class="title" style="padding-left: 20px; margin-bottom: 25px; font-size: 50px; margin-top: 50px;">Your watchlist</h1>
+        <div class="row left-aligned" style="padding-bottom: 20px; padding-left: 20px;">
+          <a href="/send_email">
+              <button class="btn btn-light" style="border-radius: 1rem;">
+                  Send Recommendations
+              </button>
+          </a>
+        </div>
+        
         {% for movie in watchlist %}
         <div class="c">
             <div class="movie-image">
