--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -55,6 +55,43 @@
         opacity: 0.9;
     }
 
+    #share-container span {
+      display: block;
+      margin: 3rem auto;
+      font-size: 50px;
+      padding: 1rem;
+      margin: 1rem;
+    }
+
+    #share-buttons i {
+      font-size: 100px;
+      margin: 20px;
+    }
+    .facebook {
+          color: #3b5998;
+    }
+    .twitter {
+        color: #55acee;
+    }
+    .linkedin {
+        color: #0077b5;
+    }
+    .reddit {
+        color: #cb2027;
+    }
+    .whatsapp {
+        color: #25D366;
+    }
+    .telegram {
+        color: #229ED9;
+    }
+    .facebook, .twitter, .linkedin, .reddit, .whatsapp, .telegram {
+      opacity: 0.6;
+    }
+    .facebook:hover, .twitter:hover, .linkedin:hover, .reddit:hover, .whatsapp:hover, .telegram:hover {
+      opacity: 0.9;
+    }
+
   </style>
 
         <h1 class="title" style="padding-left: 20px; margin-bottom: 25px; font-size: 50px; margin-top: 50px;">Your watchlist</h1>
@@ -74,5 +111,42 @@
             </div>
         </div>
         {% endfor %}
+
+        <!-- Font Awesome CDN -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+        <div id="share-buttons">
+          <a class="facebook" target="blank"><i class="fab fa-facebook"></i></a>
+          <a class="twitter" target="blank"><i class="fab fa-twitter"></i></a>
+          <a class="linkedin" target="blank"><i class="fab fa-linkedin"></i></a>
+          <a class="reddit" target="blank"><i class="fab fa-reddit"></i></a>
+          <a class="whatsapp" target="blank"><i class="fab fa-whatsapp"></i></a>
+          <a class="telegram" target="blank"><i class="fab fa-telegram"></i></a>
+        </div>
+
+        <script>
+            const url = window.location.origin;
+            const link = encodeURIComponent(url)+ "/show-watchlist/{{ user_id }}";
+            const msg = encodeURIComponent('Hey, I found this article');
+            const title = encodeURIComponent('Article or Post Title Here');
+
+            const fb = document.querySelector('.facebook');
+            fb.href = `https://www.facebook.com/share.php?u=${link}`;
+
+            const twitter = document.querySelector('.twitter');
+            twitter.href = `http://twitter.com/share?&url=${link}&text=${msg}&hashtags=javascript,programming`;
+
+            const linkedIn = document.querySelector('.linkedin');
+            linkedIn.href = `https://www.linkedin.com/sharing/share-offsite/?url=${link}`;
+
+            const reddit = document.querySelector('.reddit');
+            reddit.href = `http://www.reddit.com/submit?url=${link}&title=${title}`;
+
+            const whatsapp = document.querySelector('.whatsapp');
+            whatsapp.href = `https://api.whatsapp.com/send?text=${msg}: ${link}`;
+
+            const telegram = document.querySelector('.telegram');
+            telegram.href = `https://telegram.me/share/url?url=${link}&text=${msg}`;
+        </script>
 
 {% endblock %}
