--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   font-family: Avenir, sans-serif;
   font-size: 1rem;
   line-height: 1.5;
@@ -234,4 +235,55 @@ header {
 .unstyled-link {
   color: inherit;
   text-decoration: none;
+}
+
+.socials-container {
+  height: 5rem;
+  width: 25rem;
+  text-align: center;
+}
+
+.social-icon {
+  opacity: 0.75;
+  font-size: 2.5rem;
+  display: flex;
+  align-items: center;
+}
+
+.social-icon:hover {
+  opacity: 1;
+}
+
+/* https://about.meta.com/brand/resources/facebookapp/logo/ */
+.icon-facebook {
+  color: #1876f2;
+}
+
+/* https://about.twitter.com/en/who-we-are/brand-toolkit */
+.icon-twitter {
+  color: #1d9bf0;
+}
+
+/* https://www.redditinc.com/brand */
+.icon-reddit {
+  color: #ff4500;
+}
+
+/* https://about.meta.com/brand/resources/whatsapp/whatsapp-brand/ */
+.icon-whatsapp {
+  color: #25d365;
+}
+
+/* https://telegram.org/tour/screenshots */
+.icon-telegram {
+  color: #229ED9;
+}
+
+/* https://brand.linkedin.com/content/brand/global/en_us/index/visual-identity/color-palettes */
+.icon-linkedin {
+  color: #0077b5;
+}
+
+td {
+  text-align: center;
 }
