--- a/templates/main.html
+++ b/templates/main.html
@@ -17,6 +17,13 @@
             {% endfor %}
         </select><br/>
     </div>
+    <div width="100%">
+        <select id="genre-dropdown" class="form-select-lg selectpicker show-tick" name="genre" title="Choose genre" data-live-search="true" data-width="auto" data-size="5" required>
+            {% for genre in genres %}
+            <option value="{{genre}}" title="{{genre}}">{{genre}}</option>
+            {% endfor %}
+        </select><br/>
+    </div>
     <div class="mt-4">
         <button type="submit" id="search-button" class="btn btn-primary btn-padding btn-rounded">Search</button>
     </div>
