--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Stream Search</title>
 
-    <link rel="icon" href="/favicon.svg" color="#000000">
+    <link rel="icon" href="/static/favicon.svg" color="#000000">
 
     <!-- jquery + ajax -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
