Moved navbar to base-headered.html

--- a/templates/base-headered.html
+++ b/templates/base-headered.html
@@ -6,6 +6,17 @@
     <a href="/main" class="unstyled-link">
         <img src="/static/logo/main.svg" class="header-img" />
     </a>
+
+    <!-- Rolling custom navbar as Bootstrap's doesn't really fit with our theme. -->
+    <div class="navbar-container">
+        <div class="btn-group">
+            <button type="button" class="btn navbar-button">About us</button>
+            <button type="button" class="btn navbar-button">Watchlist</button>
+            <button type="button" class="btn navbar-button">Profile</button>
+            <button type="button" class="btn navbar-button">Logout</button>
+        </div>
+    </div>
+
     {% block header_aux %}
 
     {% endblock %}
