Added functionality to navbar, cleaned up login code

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,7 +44,7 @@ header {
   float: right;
 }
 
-.navbar-button {
+.navbar-text {
   background-color: transparent;
   font-size: 1.25rem;
   color: #DEDEDE;
