Fixed favicon issue on Safari
Safari doesn't support svg favicons, so added line for favicon.ico.

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Stream Search</title>
 
-    <link rel="icon" href="/static/favicon.svg" color="#000000">
+    <link rel="icon" href="/static/favicon.ico" sizes="any">
+    <link rel="icon" href="/static/favicon.svg" type="image/svg+xml">
 
     <!-- jquery + ajax -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
