--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,6 +37,10 @@ header {
   height: 5rem;
 }
 
+.small-text {
+  font-size: 0.8rem;
+}
+
 .navbar-container {
   vertical-align: middle;
   padding-left: 3rem;
@@ -136,6 +140,30 @@ header {
   padding: 1rem;
   text-align: center;
   color: #381333;
+}
+
+.login-button {
+  text-align: center;
+  color: #DEDEDE;
+  background-color: #381333;
+}
+
+.login-button:hover {
+  background: #2E2E2E;
+  color: #DEDEDE;
+}
+
+.separator {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.separator::before,
+.separator::after {
+  content: '';
+  flex: 1;
+  border-bottom: 0.5px solid #381333;
 }
 
 .media-card {
