--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,11 @@
     <div width="100%">
         <select id="genre-dropdown" class="form-select-lg selectpicker show-tick" name="genre" title="Choose genre" data-live-search="true" data-width="auto" data-size="5">
             {% for genre in genres %}
-            <option value="{{genre}}" title="{{genre}}">{{genre}}</option>
+                {% if genre == "All genres" %}
+                <option value="{{genre}}" title="{{genre}}" selected>{{genre}}</option>
+                {% else %}
+                <option value="{{genre}}" title="{{genre}}">{{genre}}</option>
+                {% endif %}
             {% endfor %}
         </select><br/>
     </div>
