Fixed bug in all genres filter
Errors fixed:
* Failure on selecting "All genres"
* Duplicate genre listings

Genre dropdown is sorted now.

Removed filter button, filter occurs on change.

Some other minor code and UI changes.

--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@
                     Remember me
                 </input><br />
 
-                <button class="btn login-button mb-3">Login</button>
+                <button class="btn ss-button login-button mb-3">Login</button>
 
                 <div class="separator">
                     <div class="small-text mx-2">
@@ -48,9 +48,9 @@
 
                 <div id="sso-buttons" class="mx-auto mt-3 mb-3" style="width: 15rem;">
                     <div class="mb-1">
-                        <a href="/login_oauth" class="btn login-button" role="button">
+                        <a href="/login_oauth" class="btn ss-button login-button" role="button">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Lohgo.svg.png"
-                                class="sso-button" />
+                                class="sso-logo" />
                             &nbspLogin with Google
                         </a>
                     </div>
