--- a/templates/main.html
+++ b/templates/main.html
@@ -29,7 +29,7 @@
         </select><br/>
     </div>
     <div class="mt-4">
-        <button type="submit" id="search-button" class="btn btn-primary btn-padding btn-rounded">Search</button>
+        <button type="submit" id="search-button" class="btn ss-button">Search</button>
     </div>
 </form>
 
