--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,31 @@ body {
   color: #DEDEDE;
 }
 
+.small-text {
+  font-size: 0.8rem;
+}
+
+.unstyled-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.centered {
+  text-align: center;
+}
+
+.left-aligned {
+  text-align: left;
+}
+
+.right-aligned {
+  text-align: right;
+}
+
+.justified {
+  text-align: justify;
+}
+
 header {
   position: sticky;
   top: 0;
@@ -37,10 +62,6 @@ header {
   height: 5rem;
 }
 
-.small-text {
-  font-size: 0.8rem;
-}
-
 .navbar-container {
   vertical-align: middle;
   padding-left: 3rem;
@@ -52,22 +73,6 @@ header {
   background-color: transparent;
   font-size: 1.25rem;
   color: #DEDEDE;
-}
-
-.centered {
-  text-align: center;
-}
-
-.left-aligned {
-  text-align: left;
-}
-
-.right-aligned {
-  text-align: right;
-}
-
-.justified {
-  text-align: justify;
 }
 
 .split {
@@ -87,29 +92,19 @@ header {
   height: 100%;
 }
 
-.textbox-rounded {
-  width: 15rem;
-  height: 2.5rem;
-  border-radius: 1.25rem;
-  text-align: center;
-}
-
-#search-textbox {
-  width: 50%;
-  height: 4rem;
-  border-radius: 2rem;
-  border-width: 0;
-  text-align: center;
-  background-color: #2E2E2E;
+.ss-button {
   color: #DEDEDE;
+  background-color: #381333;
 }
 
-#search-button {
-  background-color: #381333;
-  border-width: 0;
-  width: 10rem;
-  height: 3rem;
-  border-radius: 1.5rem;
+.ss-button:hover {
+  background: #2E2E2E !important;
+  color: #DEDEDE !important;
+}
+
+.ss-button:active {
+  background: #2E2E2E !important;
+  color: #DEDEDE !important;
 }
 
 #login-icon {
@@ -144,13 +139,11 @@ header {
 
 .login-button {
   text-align: center;
-  color: #DEDEDE;
-  background-color: #381333;
 }
 
-.login-button:hover {
-  background: #2E2E2E;
-  color: #DEDEDE;
+.sso-logo {
+  height: 1rem;
+  width: 1rem;
 }
 
 .separator {
@@ -164,6 +157,31 @@ header {
   content: '';
   flex: 1;
   border-bottom: 0.5px solid #381333;
+}
+
+.textbox-rounded {
+  width: 15rem;
+  height: 2.5rem;
+  border-radius: 1.25rem;
+  text-align: center;
+}
+
+#search-textbox {
+  width: 50%;
+  height: 4rem;
+  border-radius: 2rem;
+  border-width: 0;
+  text-align: center;
+  background-color: #2E2E2E;
+  color: #DEDEDE;
+}
+
+#search-button {
+  background-color: #381333;
+  border-width: 0;
+  width: 10rem;
+  height: 3rem;
+  border-radius: 1.5rem;
 }
 
 .media-card {
@@ -253,16 +271,6 @@ header {
 
 .search-failure-box {
   font-size: 2rem;
-}
-
-.sso-button {
-  height: 1rem;
-  width: 1rem;
-}
-
-.unstyled-link {
-  color: inherit;
-  text-decoration: none;
 }
 
 .socials-container {
