--- a/templates/search-success.html
+++ b/templates/search-success.html
@@ -4,14 +4,12 @@
 
 <form action="/filter" method="POST" class="mt-5 mb-5 centered">
     <div width="100%">
-        <select id="language-dropdown" class="form-select-lg selectpicker show-tick" name="language" title="Choose language" data-live-search="true" data-width="auto" data-size="5">
+        <select id="language-dropdown" class="form-select-lg selectpicker show-tick" name="language"
+            onchange="this.form.submit()"title="Filter by language" data-live-search="true" data-width="auto" data-size="10">
             {% for language in languages %}
             <option value="{{language}}" title="{{language}}">{{language}}</option>
             {% endfor %}
-        </select><br/>
-    </div>
-    <div class="mt-4">
-        <button type="submit" id="search-button" class="btn btn-primary btn-padding btn-rounded">Search</button>
+        </select><br />
     </div>
 </form>
 
@@ -30,16 +28,12 @@
                             {{media.title}}
                         </div>
                         <div class="media-card-overview">
-                            {% if media.overview|length < 250 %}
-                                {{media.overview}}
-                            {% else %}
-                                {{media.overview[:250]}}...
-                            {% endif %}
+                            {% if media.overview|length < 250 %} {{media.overview}} {% else %}
+                                {{media.overview[:250]}}... {% endif %} </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </a>
     {% endfor %}
 </div>
